--- a/bizbook-client/src/app/auth/login/login.component.html
+++ b/bizbook-client/src/app/auth/login/login.component.html
@@ -21,9 +21,9 @@
     <label class="label" for="input-email">Email address:</label>
     <input nbInput
            fullWidth
-           [(ngModel)]="user.email"
+           [(ngModel)]="user.username"
            #email="ngModel"
-           name="email"
+           name="username"
            id="input-email"
            pattern=".+@.+\..+"
            placeholder="Email address"
