--- a/src/app/pages/product/brand-list/brand-list.component.html
+++ b/src/app/pages/product/brand-list/brand-list.component.html
@@ -1,28 +1,3 @@
 <button type="button" class="btn btn-primary" (click)="addBrnadLink()">Add Brnads</button>
 <br>
-<div>
-  <table class="table">
-    <thead>
-      <tr>
-
-        <th scope="col">Nmae</th>
-        <th scope="col">Address</th>
-        <th scope="col">Phone</th>
-        <th scope="col">ContactPersonName</th>
-        <th scope="col">Country</th>
-
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let brnad of brands">
-
-        <td>{{brnad.Name}}</td>
-        <td>{{brnad.Address}}</td>
-        <td>{{brnad.Phone}}</td>
-        <td>{{brnad.ContactPersonName}}</td>
-        <td>{{brnad.Country}}</td>
-      </tr>
-
-    </tbody>
-  </table>
-</div>
+<ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
