--- a/src/app/pages/product/brand-entry/brand-entry.component.html
+++ b/src/app/pages/product/brand-entry/brand-entry.component.html
@@ -1,74 +1,149 @@
 <div class="row">
-
-
   <div class="col-md-12">
     <nb-card>
       <nb-card-header>Brand Entry</nb-card-header>
       <nb-card-body>
         <form #form="ngForm">
           <div class="form-group">
-            <label for="exampleInputEmail1">Name</label>
-            <input type="text" class="form-control" [(ngModel)]="model.Name" name="name" id="exampleInputEmail1"
-              #name="ngModel" required placeholder="Name">
-            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+            <label for="Name">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.Name"
+              name="Name"
+              id="Name"
+              #name="ngModel"
+              required
+              placeholder="Name"
+            />
+            <div
+              *ngIf="name.invalid && (name.dirty || name.touched)"
+              class="alert alert-danger"
+            >
               <div *ngIf="name.errors.required" class="error-message">
                 Name is required.
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Address</label>
-            <input type="text" [(ngModel)]="model.Address" #address="ngModel" name="address" class="form-control"
-              required id="exampleInputPassword1" placeholder="Address">
-            <div *ngIf="address.invalid && (address.dirty || address.touched)" class="alert alert-danger">
+            <label for="address">Address</label>
+            <input
+              type="text"
+              [(ngModel)]="model.Address"
+              #address="ngModel"
+              name="address"
+              class="form-control"
+              required
+              id="address"
+              placeholder="Address"
+            />
+            <div
+              *ngIf="address.invalid && (address.dirty || address.touched)"
+              class="alert alert-danger"
+            >
               <div *ngIf="address.errors.required" class="error-message">
                 Address is required.
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Phone </label>
-            <input type="text" class="form-control" [(ngModel)]="model.Phone" name="phone" id="exampleInputPassword1"
-              #phone="ngModel" required placeholder="Phone">
-            <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger">
+            <label for="phone">Phone </label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.Phone"
+              name="phone"
+              id="phone"
+              #phone="ngModel"
+              required
+              placeholder="Phone"
+            />
+            <div
+              *ngIf="phone.invalid && (phone.dirty || phone.touched)"
+              class="alert alert-danger"
+            >
               <div *ngIf="phone.errors.required" class="error-message">
                 Phone is required.
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Remarks </label>
-            <input type="text" class="form-control" [(ngModel)]="model.Remarks" name="Remarks"
-              id="exampleInputPassword1" placeholder="Remarks">
+            <label for="Remarks">Remarks </label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.Remarks"
+              name="Remarks"
+              id="Remarks"
+              placeholder="Remarks"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">ContactPersonName </label>
-            <input type="text" class="form-control" [(ngModel)]="model.ContactPersonName" name="ContactPersonName"
-              id="exampleInputPassword1" placeholder="ContactPersonName">
+            <label for="Remarks">ContactPersonName </label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.ContactPersonName"
+              name="ContactPersonName"
+              id="exampleInputPassword1"
+              placeholder="ContactPersonName"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Country </label>
-            <input type="text" class="form-control" [(ngModel)]="model.Country" name="Country"
-              id="exampleInputPassword1" placeholder="Country">
+            <label for="ContactPersonName">Country </label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.Country"
+              name="Country"
+              id="Country"
+              placeholder="Country"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">MadeInCountry </label>
-            <input type="text" class="form-control" [(ngModel)]="model.MadeInCountry" name="MadeInCountry"
-              id="exampleInputPassword1" placeholder="MadeInCountry">
+            <label for="Country">MadeInCountry </label>
+            <input
+              type="text"
+              class="form-control"
+              [(ngModel)]="model.MadeInCountry"
+              name="MadeInCountry"
+              id="MadeInCountry"
+              placeholder="MadeInCountry"
+            />
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Email </label>
-            <input type="text" [(ngModel)]="model.Email" name="Email" class="form-control" id="exampleInputPassword1"
-              placeholder="Email">
+            <label for="MadeInCountry">Email </label>
+            <input
+              type="text"
+              [(ngModel)]="model.Email"
+              name="Email"
+              class="form-control"
+              id="MadeInCountry"
+              placeholder="Email"
+            />
           </div>
           <div class="form-group">
-            <nb-checkbox [(ngModel)]="model.IsActive" name="IsActive">IsActive</nb-checkbox>
+            <label for="BrandCode">BrandCode </label>
+            <input
+              type="text"
+              [(ngModel)]="model.BrandCode"
+              name="BrandCode"
+              class="form-control"
+              id="BrandCode"
+              placeholder="BrandCode"
+            />
           </div>
-          <button [disabled]="form.invalid" type="submit" class="btn btn-danger" (click)="save()">Submit</button>
+
+          <button
+            [disabled]="form.invalid"
+            type="submit"
+            class="btn btn-danger"
+            (click)="save()"
+          >
+            Submit
+          </button>
         </form>
       </nb-card-body>
     </nb-card>
-
-
   </div>
 </div>
