--- a/src/app/pages/product/brand-list/brand-list.component.html
+++ b/src/app/pages/product/brand-list/brand-list.component.html
@@ -21,7 +21,7 @@
         #
       </th>
       <th (click)="toggleSort('name')">
-        Name<span class="glyphicon glyphicon-sort"></span>
+        Name<i class="fas fa-exchange-alt fa-exchange-alt"></i>
       </th>
       <th>Address</th>
       <th>
@@ -44,18 +44,18 @@
     </tr>
   </tbody>
 </table>
-
-<div class="d-flex justify-content-between p-2">
+<div class="pull-right pagination" [hidden]="searchRequest.page == -1">
+  <div class="pull-left pagination-detail">
+    <span class="pagination-info"
+      >Showing {{ (searchRequest.page - 1) * 10 + 1 }} to
+      {{ searchRequest.page * 10 }}
+      <span ng-hide="totalCount==0"> of {{ totalCount }} rows</span></span
+    >
+  </div>
   <ul class="pagination">
     <li class="page-item" *ngIf="searchRequest.page > 2">
       <a href="javascript:void(0)" (click)="goto(1)"
-        ><i
-          class="fa fa-angle-double-left"
-          style="
-                font-weight: 600;
-                font-size: 24px;
-            "
-        ></i
+        ><i class="fa fa-angle-double-left"></i
       ></a>
     </li>
     <li class="page-item" *ngIf="searchRequest.page > 2">
