--- a/src/app/pages/product/brand-entry/brand-entry.component.html
+++ b/src/app/pages/product/brand-entry/brand-entry.component.html
@@ -9,7 +9,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.Name"
+              [(ngModel)]="model.name"
               name="Name"
               id="Name"
               #name="ngModel"
@@ -29,7 +29,7 @@
             <label for="address">Address</label>
             <input
               type="text"
-              [(ngModel)]="model.Address"
+              [(ngModel)]="model.address"
               #address="ngModel"
               name="address"
               class="form-control"
@@ -51,7 +51,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.Phone"
+              [(ngModel)]="model.phone"
               name="phone"
               id="phone"
               #phone="ngModel"
@@ -72,7 +72,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.Remarks"
+              [(ngModel)]="model.remarks"
               name="Remarks"
               id="Remarks"
               placeholder="Remarks"
@@ -83,7 +83,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.ContactPersonName"
+              [(ngModel)]="model.contactPersonName"
               name="ContactPersonName"
               id="exampleInputPassword1"
               placeholder="ContactPersonName"
@@ -94,7 +94,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.Country"
+              [(ngModel)]="model.country"
               name="Country"
               id="Country"
               placeholder="Country"
@@ -105,7 +105,7 @@
             <input
               type="text"
               class="form-control"
-              [(ngModel)]="model.MadeInCountry"
+              [(ngModel)]="model.madeInCountry"
               name="MadeInCountry"
               id="MadeInCountry"
               placeholder="MadeInCountry"
@@ -115,7 +115,7 @@
             <label for="MadeInCountry">Email </label>
             <input
               type="text"
-              [(ngModel)]="model.Email"
+              [(ngModel)]="model.email"
               name="Email"
               class="form-control"
               id="MadeInCountry"
@@ -126,7 +126,7 @@
             <label for="BrandCode">BrandCode </label>
             <input
               type="text"
-              [(ngModel)]="model.BrandCode"
+              [(ngModel)]="model.brandCode"
               name="BrandCode"
               class="form-control"
               id="BrandCode"
