--- a/src/app/pages/setup/shop/entry/shop-entry.component.html
+++ b/src/app/pages/setup/shop/entry/shop-entry.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <nb-card>
-      <nb-card-header>Brand Entry</nb-card-header>
+      <nb-card-header>Shop Entry</nb-card-header>
       <nb-card-body>
         <form #form="ngForm">
           <div class="form-group">
@@ -123,14 +123,14 @@
             />
           </div>
           <div class="form-group">
-            <label for="BrandCode">BrandCode </label>
+            <label for="ShopCode">ShopCode </label>
             <input
               type="text"
-              [(ngModel)]="model.brandCode"
-              name="BrandCode"
+              [(ngModel)]="model.ShopCode"
+              name="ShopCode"
               class="form-control"
-              id="BrandCode"
-              placeholder="BrandCode"
+              id="ShopCode"
+              placeholder="ShopCode"
             />
           </div>
 
