--- a/src/app/pages/setup/shop/entry/shop-entry.component.html
+++ b/src/app/pages/setup/shop/entry/shop-entry.component.html
@@ -6,140 +6,139 @@
         <form #form="ngForm">
           <div class="form-group">
             <label for="Name">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.name"
-              name="Name"
-              id="Name"
-              #name="ngModel"
-              required
-              placeholder="Name"
-            />
-            <div
-              *ngIf="name.invalid && (name.dirty || name.touched)"
-              class="alert alert-danger"
-            >
+            <input type="text" class="form-control" [(ngModel)]="model.name" name="Name" id="Name" #name="ngModel"
+              required placeholder="Name" />
+            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
               <div *ngIf="name.errors.required" class="error-message">
                 Name is required.
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="address">Address</label>
-            <input
-              type="text"
-              [(ngModel)]="model.address"
-              #address="ngModel"
-              name="address"
-              class="form-control"
-              required
-              id="address"
-              placeholder="Address"
-            />
-            <div
-              *ngIf="address.invalid && (address.dirty || address.touched)"
-              class="alert alert-danger"
-            >
-              <div *ngIf="address.errors.required" class="error-message">
-                Address is required.
-              </div>
-            </div>
+            <label for="houseNo">House No</label>
+            <input type="text" [(ngModel)]="model.houseNo" #houseNo="ngModel" name="houseNo" class="form-control"
+              id="houseNo" placeholder="houseNo" />
           </div>
           <div class="form-group">
-            <label for="phone">Phone </label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.phone"
-              name="phone"
-              id="phone"
-              #phone="ngModel"
-              required
-              placeholder="Phone"
-            />
-            <div
-              *ngIf="phone.invalid && (phone.dirty || phone.touched)"
-              class="alert alert-danger"
-            >
-              <div *ngIf="phone.errors.required" class="error-message">
-                Phone is required.
-              </div>
-            </div>
+            <label for="roadNo">Road No</label>
+            <input type="text" [(ngModel)]="model.roadNo" #roadNo="ngModel" name="roadNo" class="form-control"
+              id="roadNo" placeholder="roadNo" />
           </div>
           <div class="form-group">
-            <label for="Remarks">Remarks </label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.remarks"
-              name="Remarks"
-              id="Remarks"
-              placeholder="Remarks"
-            />
+            <label for="area">Area</label>
+            <input type="text" [(ngModel)]="model.area" #area="ngModel" name="area" class="form-control" id="area"
+              placeholder="area" />
           </div>
           <div class="form-group">
-            <label for="Remarks">ContactPersonName </label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.contactPersonName"
-              name="ContactPersonName"
-              id="exampleInputPassword1"
-              placeholder="ContactPersonName"
-            />
-          </div>
-          <div class="form-group">
-            <label for="ContactPersonName">Country </label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.country"
-              name="Country"
-              id="Country"
-              placeholder="Country"
-            />
-          </div>
-          <div class="form-group">
-            <label for="Country">MadeInCountry </label>
-            <input
-              type="text"
-              class="form-control"
-              [(ngModel)]="model.madeInCountry"
-              name="MadeInCountry"
-              id="MadeInCountry"
-              placeholder="MadeInCountry"
-            />
-          </div>
-          <div class="form-group">
-            <label for="MadeInCountry">Email </label>
-            <input
-              type="text"
-              [(ngModel)]="model.email"
-              name="Email"
-              class="form-control"
-              id="MadeInCountry"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group">
-            <label for="ShopCode">ShopCode </label>
-            <input
-              type="text"
-              [(ngModel)]="model.ShopCode"
-              name="ShopCode"
-              class="form-control"
-              id="ShopCode"
-              placeholder="ShopCode"
-            />
+            <label for="thana">Thana</label>
+            <input type="text" [(ngModel)]="model.thana" #thana="ngModel" name="thana" class="form-control" id="thana"
+              placeholder="thana" />
           </div>
 
-          <button
-            [disabled]="form.invalid"
-            type="submit"
-            class="btn btn-danger"
-            (click)="save()"
-          >
+          <div class="form-group">
+            <label for="area">District</label>
+            <input type="text" [(ngModel)]="model.district" #district="ngModel" name="district" class="form-control"
+              id="district" placeholder="district" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" [(ngModel)]="model.country" #country="ngModel" name="country" class="form-control"
+              id="country" placeholder="country" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Phone</label>
+            <input type="text" [(ngModel)]="model.phone" #phone="ngModel" name="phone" class="form-control" id="phone"
+              placeholder="phone" />
+          </div>
+
+
+          <div class="form-group">
+            <label for="country">remarks</label>
+            <input type="text" [(ngModel)]="model.remarks" #remarks="ngModel" name="remarks" class="form-control"
+              id="remarks" placeholder="remarks" />
+          </div>
+
+
+          <div class="form-group">
+            <label for="country">ContactPersonName</label>
+            <input type="text" [(ngModel)]="model.contactPersonName" #contactPersonName="ngModel" name="contactPersonName"
+              class="form-control" id="contactPersonName" placeholder="contactPersonName" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">about</label>
+            <input type="text" [(ngModel)]="model.about" #about="ngModel" name="about" class="form-control" id="about"
+              placeholder="about" />
+          </div>
+
+
+          <div class="form-group">
+            <label for="country">wcUrl</label>
+            <input type="text" [(ngModel)]="model.wcUrl" #wcUrl="ngModel" name="wcUrl" class="form-control" id="wcUrl"
+              placeholder="wcUrl" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">key</label>
+            <input type="text" [(ngModel)]="model.key" #key="ngModel" name="key" class="form-control" id="key"
+              placeholder="key" />
+          </div>
+
+
+          <div class="form-group">
+            <label for="country">secret</label>
+            <input type="text" [(ngModel)]="model.secret" #secret="ngModel" name="secret" class="form-control"
+              id="secret" placeholder="secret" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">chalanName</label>
+            <input type="text" [(ngModel)]="model.chalanName" #chalanName="ngModel" name="chalanName" class="form-control"
+              id="chalanName" placeholder="chalanName" />
+          </div>
+
+
+          <div class="form-group">
+            <label for="country">Receipt Name</label>
+            <input type="text" [(ngModel)]="model.receiptName" #receiptName="ngModel" name="receiptName"
+              class="form-control" id="receiptName" placeholder="receiptName" />
+          </div>
+
+
+          
+         <div class="form-group">
+            <label for="country">Expiry Date</label>
+            <input type="date" [(ngModel)]="model.expiryDate" #expiryDate="ngModel" name="expiryDate"
+              class="form-control" id="expiryDate" placeholder="expiryDate" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Delivery Chain</label>
+            <input type="checkbox" [(ngModel)]="model.hasDeliveryChain" #hasDeliveryChain="ngModel" name="hasDeliveryChain"
+              class="form-control" id="hasDeliveryChain" placeholder="hasDeliveryChain" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Show Order Number</label>
+            <input type="checkbox" [(ngModel)]="model.isShowOrderNumber" #isShowOrderNumber="ngModel" name="isShowOrderNumber"
+              class="form-control" id="isShowOrderNumber" placeholder="isShowOrderNumber" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Auto Add To Cart</label>
+            <input type="checkbox" [(ngModel)]="model.isAutoAddToCart" #isAutoAddToCart="ngModel" name="isAutoAddToCart"
+              class="form-control" id="isAutoAddToCart" placeholder="isAutoAddToCart" />
+          </div>
+
+          <div class="form-group">
+            <label for="country">Delivery Charge</label>
+            <input type="text" [(ngModel)]="model.deliveryCharge" #deliveryCharge="ngModel" name="deliveryCharge"
+              class="form-control" id="deliveryCharge" placeholder="deliveryCharge" />
+          </div>
+
+          <button [disabled]="form.invalid" type="submit" class="btn btn-danger" (click)="save()">
             Submit
           </button>
         </form>
