--- a/src/app/pages/setup/shop/list/shop.component.html
+++ b/src/app/pages/setup/shop/list/shop.component.html
@@ -1,28 +1,98 @@
-<button type="button" class="btn btn-primary" (click)="addBrnadLink()">Add Shop</button>
-<br>
-<div>
-  <table class="table">
-    <thead>
-      <tr>
+<div class="form-group form-inline">
+  <form #form="ngForm" (ngSubmit)="search()">
+    <input
+      type="text"
+      class="form-control"
+      [(ngModel)]="searchRequest.keyword"
+      name="Name"
+      id="Name"
+      #name="ngModel"
+      required
+      placeholder="Search"
+    />
+  </form>
+  <span class="ml-3" *ngIf="">Loading...</span>
+</div>
 
-        <th scope="col">Nmae</th>
-        <th scope="col">Address</th>
-        <th scope="col">Phone</th>
-        <th scope="col">ContactPersonName</th>
-        <th scope="col">Country</th>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th width="1">
+        #
+      </th>
+      <th (click)="toggleSort('name')">
+        Name<i class="fas fa-exchange-alt fa-exchange-alt"></i>
+      </th>
+      <th>Address</th>
+      <th>
+        Phone
+      </th>
+      <th>Modified</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr
+      *ngFor="let brand of models; index as i"
+      (click)="gotoDetails(brand.id)"
+    >
+      <td>
+        {{ i + 1 }}
+      </td>
+      <td>
+        {{ brand.name }}
+      </td>
+      <td>{{ brand.address }}</td>
+      <td>{{ brand.phone }}</td>
+      <td>{{ brand.modified | date }}</td>
+    </tr>
+  </tbody>
+</table>
+<div class="pull-right pagination" [hidden]="searchRequest.page == -1">
+  <div class="pull-left pagination-detail">
+    <span class="pagination-info"
+      >Showing {{ (searchRequest.page - 1) * 10 + 1 }} to
+      {{ searchRequest.page * 10 }}
+      <span ng-hide="totalCount==0"> of {{ totalCount }} rows</span></span
+    >
+  </div>
+  <ul class="pagination">
+    <li class="page-item" *ngIf="searchRequest.page > 2">
+      <a href="javascript:void(0)" (click)="goto(1)"
+        ><i class="fa fa-angle-double-left"></i
+      ></a>
+    </li>
+    <li class="page-item" *ngIf="searchRequest.page > 2">
+      <a href="javascript:void(0)" (click)="goto(searchRequest.page - 2)"
+        ><i class="fa fa-angle-left"></i
+      ></a>
+    </li>
+    <li class="page-item" *ngIf="searchRequest.page > 1">
+      <a href="javascript:void(0)" (click)="goto(searchRequest.page - 1)">{{
+        searchRequest.page - 1
+      }}</a>
+    </li>
 
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let shop of shops">
+    <li class="page-item active">
+      <a href="javascript:void(0)" (click)="goto(searchRequest.page)">{{
+        searchRequest.page
+      }}</a>
+    </li>
 
-        <td>{{shop.Name}}</td>
-        <td>{{shop.StreetAddress}}</td>
-        <td>{{shop.Phone}}</td>
-        <td>{{shop.ContactPersonName}}</td>
-        <td>{{shop.Country}}</td>
-      </tr>
-
-    </tbody>
-  </table>
+    <li
+      class="page-item"
+      *ngIf="searchRequest.totalPage - searchRequest.page > 0"
+    >
+      <a href="javascript:void(0)" (click)="goto(searchRequest.page + 1)">{{
+        searchRequest.page + 1
+      }}</a>
+    </li>
+    <li
+      class="page-item"
+      *ngIf="searchRequest.totalPage - searchRequest.page > 1"
+    >
+      <a href="javascript:void(0)" (click)="goto(searchRequest.page + 2)"
+        ><i class="fa fa-angle-right"></i
+      ></a>
+    </li>
+  </ul>
 </div>
