--- a/src/app/pages/product/brand/entry/brand-entry.component.html
+++ b/src/app/pages/product/brand/entry/brand-entry.component.html
@@ -26,19 +26,19 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="address">NameBn</label>
+            <label for="address">Address</label>
             <input
               type="text"
-              [(ngModel)]="model.nameBn"
+              [(ngModel)]="model.address"
               #address="ngModel"
-              name="nameBn"
+              name="address"
               class="form-control"
               required
               id="address"
-              placeholder="NameBn"
+              placeholder="address"
             />
             <div
-              *ngIf="nameBn.invalid && (nameBn.dirty || nameBn.touched)"
+              *ngIf="address.invalid && (address.dirty || address.touched)"
               class="alert alert-danger"
             >
               <div *ngIf="address.errors.required" class="error-message">
