--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -44,6 +44,10 @@
             <p class="semibold-text mb-2">
               <a href="#" data-toggle="flip">Forgot Password ?</a>
             </p>
+
+            <p class="semibold-text mb-2">
+              <a href="#" routerLink="/register">Register</a>
+            </p>
           </div>
         </div>
         <div class="form-group btn-container">
