--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <h1 id="title" class="title">Register</h1>
 
-<form #loginForm="ngForm" (ngSubmit)="login()" class="login-form">
+<form #loginForm="ngForm" (ngSubmit)="register()" class="login-form">
   <section class="material-half-bg">
     <div class="cover"></div>
   </section>
@@ -14,6 +14,28 @@
           <i class="fa fa-lg fa-fw fa-user"></i>SIGN IN
         </h3>
         <div class="form-group">
+          <label class="control-label">First Name</label>
+          <input
+            class="form-control mr-sm-2"
+            type="text"
+            name="firstName"
+            placeholder="firstName"
+            required
+            [(ngModel)]="user.firstName"
+          />
+        </div>
+        <div class="form-group">
+          <label class="control-label">Last Name</label>
+          <input
+            class="form-control mr-sm-2"
+            type="text"
+            name="lastName"
+            placeholder="lastName"
+            required
+            [(ngModel)]="user.lastName"
+          />
+        </div>
+        <div class="form-group">
           <label class="control-label">EMAIL</label>
           <input
             class="form-control"
@@ -21,7 +43,7 @@
             name="email"
             placeholder="email"
             required
-            [(ngModel)]="model.email"
+            [(ngModel)]="user.email"
           />
         </div>
         <div class="form-group">
@@ -32,13 +54,37 @@
             name="password"
             placeholder="Password"
             required
-            [(ngModel)]="model.password"
+            [(ngModel)]="user.password"
+          />
+        </div>
+        <div class="form-group">
+          <label class="control-label">Confirm Password</label>
+          <input
+            class="form-control mr-sm-2"
+            type="password"
+            name="confirmPassword"
+            placeholder="Confirm Password"
+            required
+            [(ngModel)]="user.confirmPassword"
+          />
+        </div>
+
+        <div class="form-group">
+          <label class="control-label">Phone</label>
+          <input
+            class="form-control mr-sm-2"
+            type="text"
+            name="phone"
+            placeholder="phone"
+            required
+            [(ngModel)]="user.phone"
           />
         </div>
 
         <div class="form-group btn-container">
           <button class="btn btn-primary btn-block">
-            <i class="fa fa-sign-in fa-lg fa-fw" (click)="login()"></i>SIGN IN
+            <i class="fa fa-sign-in fa-lg fa-fw" (click)="register()"></i>SIGN
+            IN
           </button>
         </div>
       </div>
@@ -47,5 +93,5 @@
 </form>
 
 <section class="another-action" aria-label="Sign in">
-  Already have an account? <a class="text-link" routerLink="../login">Log in</a>
+  Already have an account? <a class="text-link" routerLink="/login">Log in</a>
 </section>
