shop entry / list

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -28,6 +28,25 @@
     <li class="treeview">
       <a class="app-menu__item" href="#" data-toggle="treeview"
         ><i class="app-menu__icon fa fa-laptop"></i
+        ><span class="app-menu__label">Shop</span
+        ><i class="treeview-indicator fa fa-angle-right"></i
+      ></a>
+      <ul class="treeview-menu">
+        <li>
+          <a class="treeview-item active" routerLink="/pages/setup/shop"
+            >Shop List</a
+          >
+        </li>
+        <li>
+          <a class="treeview-item" routerLink="/pages/setup/shopentry"
+            >Add New Shop</a
+          >
+        </li>
+      </ul>
+    </li>
+    <li class="treeview">
+      <a class="app-menu__item" href="#" data-toggle="treeview"
+        ><i class="app-menu__icon fa fa-laptop"></i
         ><span class="app-menu__label">Brand</span
         ><i class="treeview-indicator fa fa-angle-right"></i
       ></a>
