--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -63,5 +63,26 @@
         </li>
       </ul>
     </li>
+    <li class="treeview">
+      <a class="app-menu__item" href="#" data-toggle="treeview"
+        ><i class="app-menu__icon fa fa-laptop"></i
+        ><span class="app-menu__label">Product Group</span
+        ><i class="treeview-indicator fa fa-angle-right"></i
+      ></a>
+      <ul class="treeview-menu">
+        <li>
+          <a
+            class="treeview-item active"
+            routerLink="/pages/product/productgrouplist"
+            >List</a
+          >
+        </li>
+        <li>
+          <a class="treeview-item" routerLink="/pages/product/productgroupentry"
+            >Add New</a
+          >
+        </li>
+      </ul>
+    </li>
   </ul>
 </aside>
