--- a/src/app/pages/product/group/entry/product-group-entry.component.html
+++ b/src/app/pages/product/group/entry/product-group-entry.component.html
@@ -36,7 +36,7 @@
               <button
                 class="btn btn-primary"
                 [disabled]="form.invalid"
-                (click)="save()"
+                (click)="save('/pages/product/productgrouplist')"
                 type="button"
               >
                 Publish
